# test_task_robomate

./: .env.example  .pre-commit-config.yaml  README.md  a.json  main.py  pyproject.toml  requirements.txt
app/: settings.py
app/helpers/: custom_session.py  enums.py  resume_filter.py  resume_python_object.py
app/parse_robota_ua/: constants.py  get_link.py  parse_robota.py  robota_resume_model.py  robota_ua_parser.py
app/parse_work_ua/: enums.py  get_link.py  work_resume_model.py  work_ua_parser.py
